--- a/src/Mod03-FinalWork/Mod03-ChelasMovies.WebApp/Views/Shared/_Layout_implied.cshtml
+++ b/src/Mod03-FinalWork/Mod03-ChelasMovies.WebApp/Views/Shared/_Layout_implied.cshtml
@@ -29,6 +29,9 @@ Released   : 20090716
 			<h1>Chelas Movies</h1>
 		</div>
 		<!-- end #logo -->
+        <div id="logindisplay">
+            @Html.Partial("_LogOnPartial")
+        </div>
 		<div id="menu">
 			<ul>
                 <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
